{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 84,
  "lineage": "69d284fc-8ec9-d0bf-44f4-1ae2b8a730a7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4e4b4eb2e11d1d4",
            "arn": "arn:aws:ec2:us-east-1:173827533868:instance/i-0072fecb6ae2ed588",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0072fecb6ae2ed588",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08a352b45b91fe355",
            "private_dns": "ip-172-31-25-231.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.25.231",
            "public_dns": "ec2-54-91-41-253.compute-1.amazonaws.com",
            "public_ip": "54.91.41.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d4ce1bdb549cc9cd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cd5dd85ea2983ea",
            "tags": {
              "Name": "prod - instance"
            },
            "tags_all": {
              "Name": "prod - instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2dc052388ea85c5"
            ]
          },
          "dependencies": [
            "data.aws_ami.Linux_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173827533868:internet-gateway/igw-07e4e686aebb5e7ee",
            "id": "igw-07e4e686aebb5e7ee",
            "owner_id": "173827533868",
            "tags": {
              "Name": "terra-igw"
            },
            "tags_all": {
              "Name": "terra-igw"
            },
            "vpc_id": "vpc-020dd38156338a69a"
          },
          "dependencies": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv-terra-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173827533868:route-table/rtb-06d90a2bcba09a3fb",
            "id": "rtb-06d90a2bcba09a3fb",
            "owner_id": "173827533868",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-020dd38156338a69a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-terra-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173827533868:route-table/rtb-0eed5531571933b16",
            "id": "rtb-0eed5531571933b16",
            "owner_id": "173827533868",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e4e686aebb5e7ee",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table."
            },
            "tags_all": {
              "Name": "Public Route Table."
            },
            "timeouts": null,
            "vpc_id": "vpc-020dd38156338a69a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-terra-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019d78b23b7463f27",
            "route_table_id": "rtb-0eed5531571933b16",
            "subnet_id": "subnet-02630a17f32c05c85"
          },
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_route_table.pub-terra-rt",
            "aws_subnet.terra-pub-sub1",
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-priv-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173827533868:subnet/subnet-0ab08c56e463508bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab08c56e463508bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173827533868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-priv-sub1"
            },
            "tags_all": {
              "Name": "terra-priv-sub1"
            },
            "vpc_id": "vpc-020dd38156338a69a"
          },
          "dependencies": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-pub-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173827533868:subnet/subnet-02630a17f32c05c85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02630a17f32c05c85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173827533868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-pub-sub1"
            },
            "tags_all": {
              "Name": "terra-pub-sub1"
            },
            "vpc_id": "vpc-020dd38156338a69a"
          },
          "dependencies": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173827533868:vpc/vpc-020dd38156338a69a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-013dfeb2fc128cedd",
            "default_route_table_id": "rtb-0b84ee2f9ad6456b6",
            "default_security_group_id": "sg-03a774699f650c559",
            "dhcp_options_id": "dopt-0c107956a20c9a875",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-020dd38156338a69a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b84ee2f9ad6456b6",
            "owner_id": "173827533868",
            "tags": {
              "Name": "terra-vpc"
            },
            "tags_all": {
              "Name": "terra-vpc"
            }
          }
        }
      ]
    }
  ]
}